@@ -42,7 +42,7 @@
                 </document>
             </documents>
 	</branch>
-	<branch tag="HEAD">
+	<branch tag="HEAD" stringfrozen="1">
             <translation-domains><!-- defaults to a single "po" -->
         	<domain base="epiphany">
         	    <directory>po</directory>
@@ -80,7 +80,31 @@
   </module>
 
 
-  <!-- example of minimal entry (all defaults where applicable, equivalent to above) -->
+  <module id="gtk+">
+    <_description>Gtk+</_description><!-- defaults to ID -->
+    <maintainers>
+	<maintainer><name>Owen Taylor</name>
+		    <email>otaylor@redhat.com</email>
+		    <irc-nickname>otaylor</irc-nickname></maintainer>
+    </maintainers>
+    <webpage>http://www.gtk.org/</webpage>
+    <branches>
+        <branch tag="gtk-2-8" stringfrozen="1">
+            <translation-domains><!-- defaults to a single "po" -->
+        	<domain base="gtk+">
+        	    <directory>po</directory>
+        	    <_description>UI translations</_description>
+                </domain>
+        	<domain base="gtk+-properties">
+        	    <directory>po-properties</directory>
+        	    <_description>GObject Class Properties</_description>
+                </domain>
+            </translation-domains>
+	</branch>
+        <branch tag="HEAD" />
+    </branches>
+  </module>
+
   <module id="rhythmbox">
     <_description>Rhythmbox Music Player</_description><!-- defaults to ID -->
     <maintainers>
